Add support for opensearch storage
Signed-off-by: danish9039 <danishsiddiqui040@gmail.com>